[package]
name = "dmx512-rdm-protocol"
description = "DMX512 and Remote Device Management (RDM) protocol written in Rust"
version = "0.5.1"
edition = "2021"
rust-version = "1.81.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mpowell90/dmx512-rdm-protocol"
homepage = "https://github.com/mpowell90/dmx512-rdm-protocol"
keywords = ["dmx", "rdm", "lighting", "protocol", "control"]

[features]
default = ["rdm", "alloc"]
rdm = []
alloc = []

[dependencies]
heapless = "0.8.0"
