[workspace]
resolver = "2"
members = [
  "rdm-core",
  "rdm-derive",
]

# [package]
# name = "dmx512-rdm-protocol"
[workspace.package]
edition = "2024"
# description = "DMX512 and Remote Device Management (RDM) protocol written in Rust"

# [features]
# default = ["rdm"]
# rdm = []

[package]
name = "dmx512-rdm-protocol"
description = "DMX512 and Remote Device Management (RDM) protocol written in Rust"
version = "0.8.2"
# edition = "2021"
# rust-version = "1.81.0"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mpowell90/dmx512-rdm-protocol"
homepage = "https://github.com/mpowell90/dmx512-rdm-protocol"
keywords = ["dmx", "rdm", "lighting", "protocol", "control"]
edition.workspace = true

[features]
default = ["rdm"]
rdm = []

[dependencies]
heapless = "0.9.1"
macaddr = { version = "1.0.1", default-features = false }
rdm-core = { path = "./rdm-core" }
rdm-derive = { path = "./rdm-derive" }
bitflags = "2.10.0"
