[package]
name = "rdm-parameter-derive"
version = "0.1.0"
# repository.workspace = true
# license.workspace = true
edition.workspace = true
# rust-version.workspace = true
# include.workspace = true

[lib]
proc-macro = true
bench = false

[dependencies]
syn = { version = "2.0.8", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.69"
rdm-parameter-traits = { path = "../rdm-parameter-traits" }

[dev-dependencies]
heapless = "0.9.1"

# [lints]
# workspace = true
