[package]
name = "rdm-parameter-traits"
version = "0.1.0"
# repository.workspace = true
# license.workspace = true
edition.workspace = true
# rust-version.workspace = true
# include.workspace = true

[lib]
bench = false

[features]
# Keep default minimal for no_std users.
default = ["std"]

# Enables implementations for allocation-backed types like `Vec`, `String`, `Box<[T]>`, and alloc collections.
alloc = []

# Enables implementations for std-only collections like `HashMap` / `HashSet`.
std = ["alloc"]

[dependencies]
heapless = "0.9.1"

# [lints]
# workspace = true
